Design Audit: added correct headings on mobile

--- a/crt_portal/static/sass/custom/landing.scss
+++ b/crt_portal/static/sass/custom/landing.scss
@@ -7,7 +7,7 @@ $arrow-height: 24px;
   h1 {
     margin-top: 1rem;
     margin-bottom: 0;
-    line-height: 1.33;
+    line-height: 1.3;
   }
 
   h2 {
@@ -20,15 +20,17 @@ $arrow-height: 24px;
   }
 
   @include at-media-max(mobile-lg) {
-      padding-top: 3rem;
-      padding-bottom: 3rem;
-      &.crt-landing--lightblue{
-        padding-top: 0;
-      }
-      &.crt-landing--emergency {
-        padding-top: 1.5rem;
-        padding-bottom: 1.5rem;
-      }
+    padding-top: 3rem;
+    padding-bottom: 3rem;
+
+    &.crt-landing--lightblue {
+      padding-top: 0;
+    }
+
+    &.crt-landing--emergency {
+      padding-top: 1.5rem;
+      padding-bottom: 1.5rem;
+    }
   }
 }
 
@@ -98,6 +100,7 @@ $arrow-height: 24px;
     justify-content: space-between;
 
     padding: 0 1rem 0 6rem;
+
     @include at-media-max(desktop) {
       padding: 0 1rem;
     }
@@ -143,6 +146,7 @@ $arrow-height: 24px;
     font-weight: normal !important;
     margin-top: 0.5rem;
     padding: 0.5rem 0 !important;
+
     &:hover {
       font-weight: bold !important;
     }
@@ -176,13 +180,16 @@ $arrow-height: 24px;
     background-color: #436eac;
     min-height: 600px;
     color: color('white');
+
     .h1__display {
       color: color('white');
     }
+
     .crt-button--large {
       background: color($theme-color-warning);
       color: black !important;
     }
+
     a,
     a:visited {
       color: white;
@@ -251,20 +258,26 @@ $arrow-height: 24px;
     min-height: 6rem;
     @include at-media-max(desktop) {
       min-height: unset;
+      
+      &.crt-landing--largetext {
+        font-size: $theme-heading-font-size-md-mobile;
+        line-height: 1.3;
+      }
     }
   }
 }
 
-.crt_landing--section_item{
+.crt_landing--section_item {
   margin-top: 2.5rem;
   margin-bottom: 2.5rem;
 }
 
 .crt-landing--rights {
   .crt-landing--rights_text {
-    @include text--heading__large();
+    @include text--heading__medium();
     margin-bottom: 2rem;
-    @include at-media-max(mobile-lg){
+
+    @include at-media-max(mobile-lg) {
       margin-bottom: 1.5rem;
     }
   }
@@ -280,6 +293,9 @@ $arrow-height: 24px;
 
 .crt-landing--largetext {
   @include text--heading__medium();
+  @include at-media-max(mobile-lg) {
+    @include text--body-copy__medium();
+  }
   margin-top: 0;
   margin-bottom: 1.5rem;
 }
@@ -313,6 +329,7 @@ $arrow-height: 24px;
     border-left: 1px solid color($theme-color-primary-darker);
     padding-left: units($spacer-4x) !important;
     margin-top: units($spacer-5x);
+
     @include at-media-max(mobile-lg) {
       border-left: none;
       border-top: 1px solid color($theme-color-primary-darker);
@@ -346,7 +363,8 @@ $arrow-height: 24px;
     @include u-shadow(3);
     margin-top: 2.5rem;
     padding: 0;
-    @include at-media-max(mobile-lg){
+
+    @include at-media-max(mobile-lg) {
       margin-top: 2rem;
     }
 
@@ -355,9 +373,8 @@ $arrow-height: 24px;
     }
 
     button {
+      @include text--heading__medium();
       padding: 1rem 1.5rem !important;
-      font-size: $theme-heading-font-size-md;
-      line-height: 1.3;
       font-weight: normal;
       color: color('white');
       min-height: 5rem;
@@ -368,12 +385,15 @@ $arrow-height: 24px;
       background-size: 1.5rem !important;
       width: 100%;
       height: 100%;
+
       &[aria-expanded='false'] {
         background-image: url(../../img/angle-arrow-down-white.svg) !important;
+
         &:hover {
           background-image: url(../../img/angle-arrow-down-primary.svg) !important;
         }
       }
+
       &[aria-expanded='true'] {
         background-image: url(../../img/angle-arrow-up-white.svg) !important;
       }
@@ -394,9 +414,11 @@ $arrow-height: 24px;
     @include u-shadow(3);
 
     width: calc(100% - 2rem);
+
     @include at-media-max(desktop) {
       width: 100%;
     }
+
     margin-top: 0;
 
     li {
@@ -431,6 +453,7 @@ $arrow-height: 24px;
     background-color: color('white');
     min-height: 20rem;
     padding: 2rem 3.5rem 2.5rem 3.5rem;
+
     @include at-media-max(mobile-lg) {
       padding: 1.5rem;
     }
@@ -467,7 +490,9 @@ $arrow-height: 24px;
   }
 
   @include at-media-max(mobile-lg) {
-     .crt-landing--largetext{
+    .crt-landing--largetext {
+      font-size: $theme-heading-font-size-lg-mobile;
+      line-height: 1.3;
       margin-bottom: 2rem;
     }
   }
@@ -491,6 +516,7 @@ $arrow-height: 24px;
 
     h2 {
       min-height: 3rem;
+
       @include at-media-max(desktop) {
         min-height: unset;
       }
@@ -504,15 +530,17 @@ $arrow-height: 24px;
   h2 {
     margin-top: 2rem;
     margin-bottom: 1rem;
+
     @include at-media-max(mobile-lg) {
       margin-bottom: 2rem;
     }
   }
 
   p.crt-landing--text {
-    @include text--body-copy__small();
+    @include text--body-copy__medium;
     margin-bottom: 0;
   }
+
   @include at-media-max(mobile-lg) {
     .crt-button--large {
       margin-top: 0;
@@ -524,20 +552,28 @@ $arrow-height: 24px;
   h2 {
     margin-top: 1rem;
   }
+  .crt-landing--largetext{
+    font-size: $theme-heading-font-size-md-mobile;
+    line-height: 1.3;
+  }
 }
 
 @include at-media-max(mobile-lg) {
   #crt-landing--submitted_paragraph {
-    margin-top: 0;;
+    margin-top: 0;
+    ;
   }
 }
 
 .crt-landing--card {
   @extend .crt-portal-card;
+
   a {
     font-weight: bold;
   }
+
   padding: 1.5rem 2rem !important;
+
   @include at-media-max(mobile-lg) {
     margin-top: 2.5rem;
     padding: 1.5rem !important;
